Support earlier .NET versions

--- a/AsyncLockCore.Benchmarks/AsyncLockCore.Benchmarks.csproj
+++ b/AsyncLockCore.Benchmarks/AsyncLockCore.Benchmarks.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="../AsyncLockCore.targets" />
   <PropertyGroup>
+    <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">$(TargetFrameworks);net481</TargetFrameworks>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
