--- a/AsyncLockCore.Tests/AsyncLockCore.Tests.csproj
+++ b/AsyncLockCore.Tests/AsyncLockCore.Tests.csproj
@@ -1,5 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="../AsyncLockCore.targets" />
+  <PropertyGroup>
+    <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">$(TargetFrameworks);net481</TargetFrameworks>
+  </PropertyGroup>  
   <ItemGroup>
     <PackageReference Include="MSTest" />
   </ItemGroup>
