--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,5 +6,6 @@
   <ItemGroup>
     <PackageVersion Include="BenchmarkDotNet" Version="0.13.12" />
     <PackageVersion Include="MSTest" Version="3.2.2" />
+    <PackageVersion Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
   </ItemGroup>
 </Project>
