--- a/AsyncLockCore/AsyncLockCore.csproj
+++ b/AsyncLockCore/AsyncLockCore.csproj
@@ -2,7 +2,8 @@
   <Import Project="../AsyncLockCore.targets" />
   <PropertyGroup>
     <TargetFrameworks>$(TargetFrameworks);netstandard2.0</TargetFrameworks>
-    <Version>0.1.2</Version>
+    <IsAotCompatible Condition="'$(TargetFramework)' == 'net8.0'">true</IsAotCompatible>
+    <Version>0.1.3</Version>
     <PackageVersion>$(Version)$(VersionSuffix)</PackageVersion>
     <Authors>Vasyl Novikov</Authors>
     <Description>Asynchronous read-write lock for .NET</Description>
