--- a/AsyncLockCore.Benchmarks/AsyncLockCore.Benchmarks.csproj
+++ b/AsyncLockCore.Benchmarks/AsyncLockCore.Benchmarks.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" />
+    <PackageReference Include="DotNext.Threading" Condition="'$(TargetFramework)' == 'net8.0'" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AsyncLockCore\AsyncLockCore.csproj" />
