--- a/.editorconfig
+++ b/.editorconfig
@@ -17,8 +17,14 @@ dotnet_sort_system_directives_first = true
 file_header_template = unset
 csharp_style_namespace_declarations = file_scoped
 
+dotnet_diagnostic.CS1591.severity = none
+dotnet_diagnostic.IDE0008.severity = none
+dotnet_diagnostic.IDE0011.severity = none
+dotnet_diagnostic.IDE0021.severity = none
+dotnet_diagnostic.IDE0022.severity = none
+
 
 [*{Tests,Benchmarks}.cs]
-dotnet_diagnostic.CA1001.severity = none  # https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/ca1001
-dotnet_diagnostic.CA1305.severity = none  # https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/ca1305
-dotnet_diagnostic.CA1707.severity = none  # https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/ca1707
+dotnet_diagnostic.CA1001.severity = none
+dotnet_diagnostic.CA1305.severity = none
+dotnet_diagnostic.CA1707.severity = none
