--- a/AsyncLockCore/AsyncLockCore.csproj
+++ b/AsyncLockCore/AsyncLockCore.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>$(TargetFrameworks);netstandard2.0</TargetFrameworks>
     <IsAotCompatible Condition="'$(TargetFramework)' == 'net8.0'">true</IsAotCompatible>
-    <Version>0.1.4</Version>
+    <IsAotCompatible Condition="'$(TargetFramework)' == 'net9.0'">true</IsAotCompatible>
+    <Version>0.1.5</Version>
     <PackageVersion>$(Version)$(VersionSuffix)</PackageVersion>
     <Authors>Vasyl Novikov</Authors>
     <Description>Asynchronous read-write lock for .NET</Description>
