--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,7 +41,7 @@ jobs:
         if: ${{ always() }}
 
   publish:
-    if: ${{ success() && (vars.PUBLISH == 'true' || vars.PUBLISH == 'auto' && github.ref_name == 'master') }}
+    # if: ${{ success() && (vars.PUBLISH == 'true' || vars.PUBLISH == 'auto' && github.ref_name == 'master') }}
     needs:
       - validate
     runs-on: ubuntu-latest
@@ -59,8 +59,12 @@ jobs:
       - name: Build
         run: dotnet build -c Release
 
+      - name: Env
+        run: env
+
       - name: Pack
-        run: dotnet pack ./AsyncLockCore/AsyncLockCore.csproj -c Release --no-build --version-suffix "${{ fromJSON(format('["-beta-{0}", ""]', github.run_number))[github.ref_name == 'master'] }}"
+        # run: dotnet pack ./AsyncLockCore/AsyncLockCore.csproj -c Release --no-build --version-suffix "${{ fromJSON(format('["-beta-{0}", ""]', github.run_number))[github.ref_name == 'master'] }}"
+        run: dotnet run ./.github/workflows/pack.cs
 
       - name: Push
         run: dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
