--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,8 +42,8 @@ jobs:
 
   publish:
     # if: ${{ success() && (vars.PUBLISH == 'true' || vars.PUBLISH == 'auto' && github.ref_name == 'master') }}
-    needs:
-      - validate
+    #needs:
+    #  - validate
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
